# chemCalc

./: main.py  pyproject.toml
