[tool.poetry]
name = "chemcalc"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyfiglet = "^0.8.post1"
seaborn = "^0.11.1"
sqlalchemy = "^1.3.23"
bokeh = "^2.3.0"
bs4 = "^0.0.1"
colorama = "^0.4.4"
pandas = "^1.2.2"
replit = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
